comments resolved, update-2fa implemented
